[package]
name = "jarvis"
version = "0.2.0"
authors = ["Mose Schmiedel <mose.schmiedel@web.de>"]
edition = "2018"
description = "A framework-agnostic task runner for the command line"
repository = "https://github.com/moseschmiedel/jarvis.git"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
walkdir = "2"
